force-app/main/default/objects/Challenge__c/Challenge__c.object-meta.xml
<CustomObject>
    <label>Challenge</label>
    <nameField>
        <label>Nom de la Feature</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Challenge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>