force-app/main/default/objects/Challenge__c/fields/Cat_gorie__c.field-meta.xml
<CustomField>
    <fullName>Cat_gorie__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Must Have</fullName>
            </value>
            <value>
                <fullName>Should Have</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>