force-app/main/default/objects/Challenge__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <label>Epic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM CAB</fullName>
            </value>
            <value>
                <fullName>SERVICE CLOUD</fullName>
            </value>
            <value>
                <fullName>JURIDIQUE</fullName>
            </value>
            <value>
                <fullName>WALLET</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>Partenariats</fullName>
            </value>
            <value>
                <fullName>Kipeo</fullName>
            </value>
            <value>
                <fullName>SIRH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>