force-app/main/default/objects/Challenge__c/fields/Etat__c.field-meta.xml
<CustomField>
    <fullName>Etat__c</fullName>
    <label>Etat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A faire</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>