force-app/main/default/objects/Challenge__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Valeur en point</description>
    <label>Valeur</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>